add_subdirectory(asm_gpio)
add_subdirectory(asm_hello)
add_subdirectory(asm_uppercase)
add_subdirectory(blink)
add_subdirectory(macropad_blink)
add_subdirectory(macropad_buzzer)
add_subdirectory(macropad_flash)
add_subdirectory(macropad_keypress)
add_subdirectory(macropad_sh1106)
add_subdirectory(macropad_text)
add_subdirectory(macropad_ws2812)
add_subdirectory(pio_blink)
add_subdirectory(pwm_led)
add_subdirectory(wav_demo)
